test/cli/test-mutating-policy/exceptions-allow-specific-values/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: allow-specific-values
spec:
  policyRefs:
  - name: "mpol-allow-specific-values"
    kind: MutatingPolicy
  images:
  - nginx:latest
  - busybox:latest
  allowedValues:
  - FOO
  - BAR
