test/cli/test-mutating-policy/exceptions-allow-specific-values/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-allowed-image-allowed-cap
  namespace: default
  labels:
    app: test
spec:
  containers:
  - name: nginx
    image: nginx:latest
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - FOO
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-non-allowed-image
  namespace: default
  labels:
    app: test
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    securityContext:
      capabilities:
        drop:
        - ALL
        add:
        - FOO
