test/cli/test-mutating-policy/exceptions-allow-specific-values/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mpol-exceptions-allow-specific-values
policies:
- policy.yaml
resources:
- resource.yaml
exceptions:
- exception.yaml
results:
- isMutatingPolicy: true
  kind: Pod
  patchedResources: patched-allowed.yaml
  policy: mpol-allow-specific-values
  resources:
  - default/pod-allowed-image-allowed-cap
  result: pass
- isMutatingPolicy: true
  kind: Pod
  patchedResources: patched-non-allowed.yaml
  policy: mpol-allow-specific-values
  resources:
  - default/pod-non-allowed-image
  result: pass
